# oms-5k

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.cursor/skills/create-issue/: SKILL.md
.cursor/skills/create-oms-issue/: SKILL.md
.cursor/skills/setup-project/: SKILL.md
.github/workflows/: cursor-agent.yml
docs/: setup-guide.md
src/order/api/: cli.py  cli.ts
src/order/application/: CreateOrder.ts  ListOrders.ts  ViewOrder.ts  create_order.py  list_orders.py  view_order.py
src/order/domain/: Order.ts  OrderLineItem.ts  OrderRepository.ts  order.py  order_line_item.py  order_repository.py
src/order/infrastructure/: FileOrderRepository.ts  file_order_repository.py
